fix(semantic-engine): address code review findings on fallback chain
- Preserve file iteration order in AnalysisResult (Map.copyOf doesn't).
- Distinguish a genuinely empty file from a nonexistent one.
- Keep both base and head parse-failure reasons when both sides fail.
- Degrade gracefully if the source tree walk itself fails, instead of
  propagating an UncheckedIOException.
- Add a multi-file all-degraded scenario to pin the Analysis-failed
  threshold (all files, not just one).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01QhvDK27LyLywRugvqbKBuT